--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -863,7 +863,7 @@
                                                 </span>
                                                 <span v-if="group.EpisodeRemastered">
                                                     <span v-if="group.EpisodeCategory || group.EpisodeTranslator"> - </span>
-                                                    {{ group.EpisodeRemastered === 'T' ? 'محسنة' : (group.EpisodeRemastered === 'F' ? 'غير محسنة' : group.EpisodeRemastered) }}
+                                                    {{ group.EpisodeRemastered === 'TP' ? 'محسنة وخاصة' : (group.EpisodeRemastered === 'FP' ? 'غير محسنة وخاصة' : (group.EpisodeRemastered === 'P' ? 'حلقة خاصة' : (group.EpisodeRemastered === 'T' ? 'محسنة' : (group.EpisodeRemastered === 'F' ? 'غير محسنة' : group.EpisodeRemastered)))) }}
                                                 </span>
                                             </legend>
                                             
@@ -1016,7 +1016,7 @@
                                                         </span>
                                                         <span v-if="group.EpisodeRemastered">
                                                             <span v-if="group.EpisodeCategory || group.EpisodeTranslator"> - </span>
-                                                            {{ group.EpisodeRemastered === 'T' ? 'محسنة' : (group.EpisodeRemastered === 'F' ? 'غير محسنة' : group.EpisodeRemastered) }}
+                                                            {{ group.EpisodeRemastered === 'TP' ? 'محسنة وخاصة' : (group.EpisodeRemastered === 'FP' ? 'غير محسنة وخاصة' : (group.EpisodeRemastered === 'P' ? 'حلقة خاصة' : (group.EpisodeRemastered === 'T' ? 'محسنة' : (group.EpisodeRemastered === 'F' ? 'غير محسنة' : group.EpisodeRemastered)))) }}
                                                         </span>
                                                     </legend>
 
@@ -6378,7 +6378,7 @@
                                                         </span>
                                                         <span v-if="group.EpisodeRemastered">
                                                             <span v-if="group.EpisodeCategory || group.EpisodeTranslator"> - </span>
-                                                            {{ group.EpisodeRemastered === 'T' ? 'محسنة' : (group.EpisodeRemastered === 'F' ? 'غير محسنة' : group.EpisodeRemastered) }}
+                                                            {{ group.EpisodeRemastered === 'TP' ? 'محسنة وخاصة' : (group.EpisodeRemastered === 'FP' ? 'غير محسنة وخاصة' : (group.EpisodeRemastered === 'P' ? 'حلقة خاصة' : (group.EpisodeRemastered === 'T' ? 'محسنة' : (group.EpisodeRemastered === 'F' ? 'غير محسنة' : group.EpisodeRemastered)))) }}
                                                         </span>
                                                     </legend>
                                                     
