--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -17636,7 +17636,7 @@
                     if (episode) {
                         this.openModal(episode); // Open the modal for the found episode
                     } else {
-                        console.log("Episode not found!");
+                        console.log("Episode not found!", { requested: episodeCode, totalLoaded: this.episodes.length });
                     }
                 },
 
