--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -6579,6 +6579,12 @@
                     replacementDict: {
                     "سينشي": ["شينتشي", "سينشي"],
                     "شينتشي": ["سينشي", "شينتشي"],
+                    "سينفونية": ["سينفونية", "سنفونية", "سيمفونية", "سمفونية", "سفونية", "سيفونية"],
+                    "سنفونية": ["سينفونية", "سنفونية", "سيمفونية", "سمفونية", "سفونية", "سيفونية"],
+                    "سيمفونية": ["سينفونية", "سنفونية", "سيمفونية", "سمفونية", "سفونية", "سيفونية"],
+                    "سمفونية": ["سينفونية", "سنفونية", "سيمفونية", "سمفونية", "سفونية", "سيفونية"],
+                    "سفونية":  ["سينفونية", "سنفونية", "سيمفونية", "سمفونية", "سفونية", "سيفونية"],
+                    "سيفونية": ["سينفونية", "سنفونية", "سيمفونية", "سمفونية", "سفونية", "سيفونية"],
                     "المحافظة": ["المقاطعة", "المدينة", "العاصمة", "الإقليم", "الولاية", "المديرية", "المنطقة", "البلدة", "القرية", "الحي", "الضاحية"],
                     "المقاطعة": ["المحافظة", "المدينة", "العاصمة", "الإقليم", "الولاية", "المديرية", "المنطقة", "البلدة", "القرية", "الحي", "الضاحية"],
                     "المدينة": ["المحافظة", "المقاطعة", "العاصمة", "البلدة", "القرية", "الحي", "الضاحية", "الإقليم", "الولاية", "المديرية", "المنطقة"],
