--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -621,7 +621,7 @@
             v-if="!inactivityModal && inactivityCountdown <= 30" 
             class="fixed bottom-4 right-1 z-[110] bg-red-900 text-yellow-300 px-2 py-2 rounded shadow-lg text-sm"
         >
-            ⚠️ تنتهي الجلسة خلال {{ formattedInactivityCountdown }} بسبب عدم نشاطك
+            ⚠️ تنتهي الجلسة خلال {{ formattedInactivityCountdown }} بسبب عدم النشاط
         </div>
 
             <!-- Updated Menu Button -->
