--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -14325,7 +14325,7 @@
                 },
 
                 refreshSession() {
-                    this.setBodyScrollLock(false);
+                    // this.setBodyScrollLock(false);
                     window.location.reload();
                 },
 
