--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -606,14 +606,21 @@
             class="fixed inset-0 z-[120] bg-black/80 backdrop-blur-sm flex items-center justify-center"
         >
             <div class="bg-gray-900 text-yellow-200 rounded-lg p-6 shadow-2xl w-11/12 max-w-md text-center space-y-4">
-                <div class="text-xl font-bold">لقد أنتهت الجلسة الحالية</div>
+                <div class="text-xl font-bold">
+                    لقد انتهت الجلسة الحالية
+                </div>
+            
+                <div class="text-sm text-yellow-300">
+                    بسبب عدم النشاط
+                </div>
+            
                 <button 
                     @click="refreshSession" 
                     class="px-4 py-2 bg-yellow-500 text-black font-bold rounded hover:bg-yellow-400 transition-all duration-100 active:scale-95"
                 >
                     تحديث الجلسة
                 </button>
-            </div>
+            </div>        
         </div>
 
         <!-- Inactivity countdown badge -->
