--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -610,7 +610,7 @@
                     لقد انتهت الجلسة الحالية
                 </div>
             
-                <div class="text-sm text-yellow-300">
+                <div class="text-xl font-bold text-yellow-200">
                     بسبب عدم النشاط
                 </div>
             
