--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -606,7 +606,7 @@
             class="fixed inset-0 z-[120] bg-black/80 backdrop-blur-sm flex items-center justify-center"
         >
             <div class="bg-gray-900 text-yellow-200 rounded-lg p-6 shadow-2xl w-11/12 max-w-md text-center space-y-4">
-                <div class="text-xl font-bold">
+                <div class="text-xl -m-3 font-bold">
                     لقد انتهت الجلسة الحالية
                 </div>
             
