--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -17739,19 +17739,38 @@
                         } else {
                             this.userJoined = false;
                             document.body.innerHTML = `
-                                <div style="display: flex; justify-content: center; align-items: center; height: 100vh; background: linear-gradient(135deg, #1e3c72, #2a5298); animation: fadeIn 1s;">
-                                    <div style="text-align: center; padding: 20px; border: 2px solid #fff; border-radius: 15px; background-color: rgba(0, 0, 0, 0.7); box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5); animation: slideDown 1s;">
-                                        <h1 style="font-size: 26px; font-weight: bold; color: #ff4f4f; margin-bottom: 10px;">
-                                            لست منضماً إلى القناة.<br>
-                                            <span style="font-size: 26px; font-weight: bold; color: #ffffff;">يرجى الانضمام إلى القناة لفتح الدليل، ثم أعد المحاولة.</span><br><br>
-                                            <a href="https://t.me/CodeSubs" target="_blank" rel="noopener noreferrer" style="color: #00ff00; text-decoration: none; font-size: 22px; font-weight: bold;">اضغط هنا للانتقال إلى القناة</a>
-                                        </h1><br>
-                                        <button id="retryButton" style="padding: 15px 30px; background: linear-gradient(135deg, #007BFF, #0056b3); color: #fff; border: none; border-radius: 5px; cursor: pointer; font-size: 18px; font-weight: bold; margin-top: 20px; transition: transform 0.3s, box-shadow 0.3s;">
-                                            أعد المحاولة
-                                        </button>
-                                    </div>
-                                </div>
-                            `;
+						    <div style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; background: #23447d; font-family: Tahoma, 'Segoe UI', Geneva, sans-serif; z-index: 99999;">
+						        <div style="text-align: center; padding: 30px 20px; border: 2px solid #fff; border-radius: 15px; background-color: #0f141f; box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5); max-width: 400px; width: 95%; box-sizing: border-box; direction: rtl;">
+						            <div style="margin-bottom: 30px;">
+						                <h1 style="font-size: 28px; font-weight: bold; color: #ff4f4f; margin: 0; display: flex; justify-content: center; align-items: center; gap: 10px;">
+						                    <span>🚫</span> 
+						                    <span>الوصول مقيّد</span> 
+						                    <span>🚫</span>
+						                </h1>
+						            </div>
+						            <p style="font-size: 19px; color: #ffffff; font-weight: bold; margin-bottom: 20px; margin-top: 0;">
+						                لستَ منضمًا لقناة التيليجرام.
+						            </p>
+						            <div style="color: #00ff00; font-size: 19px; font-weight: bold; margin-bottom: 5px;">
+						                اضغط على الرابط للذهاب للقناة
+						            </div>
+						            <div style="margin-bottom: 40px;">
+						                <div style="font-size: 24px; margin-bottom: 5px;">👇</div>
+						                <a href="https://t.me/CodeSubs"
+						                target="_blank"
+						                rel="noopener noreferrer"
+						                style="display: block; color: #ffff00; font-size: 19px; font-weight: bold; text-decoration: none;">
+						                    https://t.me/CodeSubs
+						                </a>
+						            </div>
+						            <button id="retryButton" style="width: 80%; padding: 12px; background: #1a6dc4; color: #fff; border: none; border-radius: 8px; cursor: pointer; font-size: 18px; font-weight: bold; transition: background 0.3s; display: inline-flex; justify-content: center; align-items: center; gap: 8px;">
+						                <span>🔍</span>
+						                <span>تحقق مرة أخرى</span>
+						                <span>🔍</span>
+						            </button>
+						        </div>
+						    </div>
+						`;
                             document.getElementById('retryButton').addEventListener('click', () => {
                                 window.location.reload();
                             });
@@ -18676,3 +18695,4 @@
     </style>
 </body>
 </html>
+
