--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -17757,6 +17757,8 @@
 						            <div style="margin-bottom: 40px;">
 						                <div style="font-size: 24px; margin-bottom: 5px;">👇</div>
 						                <a href="https://t.me/CodeSubs"
+										target="_blank"
+										rel="noopener noreferrer">
 						                style="display: block; color: #ffff00; font-size: 19px; font-weight: bold; text-decoration: none;">
 						                    https://t.me/CodeSubs
 						                </a>
@@ -18693,5 +18695,6 @@
     </style>
 </body>
 </html>
+
 
 
