--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -17758,12 +17758,12 @@
 						                <div style="font-size: 24px; margin-bottom: 5px;">👇</div>
 						                <a href="https://t.me/CodeSubs"
 										target="_blank"
-										rel="noopener noreferrer">
+										rel="noopener noreferrer"
 						                style="display: block; color: #ffff00; font-size: 19px; font-weight: bold; text-decoration: none;">
 						                    https://t.me/CodeSubs
 						                </a>
 						            </div>
-						            <button id="retryButton" style="width: 80%; padding: 12px; background: #1a6dc4; color: #fff; border: none; border-radius: 8px; cursor: pointer; font-size: 18px; font-weight: bold; transition: background 0.3s; display: inline-flex; justify-content: center; align-items: center; gap: 8px;">
+						            <button id="retryButton" class="transition-all duration-100 active:scale-90" style="width: 80%; padding: 12px; background: #1a6dc4; color: #fff; border: none; border-radius: 8px; cursor: pointer; font-size: 18px; font-weight: bold; transition: background 0.3s; display: inline-flex; justify-content: center; align-items: center; gap: 8px;">
 						                <span>🔍</span>
 						                <span>تحقق مرة أخرى</span>
 						                <span>🔍</span>
@@ -18695,6 +18695,7 @@
     </style>
 </body>
 </html>
+
 
 
 
