--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -5,6 +5,14 @@
     <script>
        window.LogRocket && window.LogRocket.init('hitfhq/dcref-emt');
     </script>
+    <script>
+        !function(t,e){var o,n,p,r;e.__SV||(window.posthog && window.posthog.__loaded)||(window.posthog=e,e._i=[],e.init=function(i,s,a){function g(t,e){var o=e.split(".");2==o.length&&(t=t[o[0]],e=o[1]),t[e]=function(){t.push([e].concat(Array.prototype.slice.call(arguments,0)))}}(p=t.createElement("script")).type="text/javascript",p.crossOrigin="anonymous",p.async=!0,p.src=s.api_host.replace(".i.posthog.com","-assets.i.posthog.com")+"/static/array.js",(r=t.getElementsByTagName("script")[0]).parentNode.insertBefore(p,r);var u=e;for(void 0!==a?u=e[a]=[]:a="posthog",u.people=u.people||[],u.toString=function(t){var e="posthog";return"posthog"!==a&&(e+="."+a),t||(e+=" (stub)"),e},u.people.toString=function(){return u.toString(1)+".people (stub)"},o="init Xr es pi Zr rs Kr Qr capture Ni calculateEventProperties os register register_once register_for_session unregister unregister_for_session ds getFeatureFlag getFeatureFlagPayload isFeatureEnabled reloadFeatureFlags updateEarlyAccessFeatureEnrollment getEarlyAccessFeatures on onFeatureFlags onSurveysLoaded onSessionId getSurveys getActiveMatchingSurveys renderSurvey displaySurvey cancelPendingSurvey canRenderSurvey canRenderSurveyAsync identify setPersonProperties group resetGroups setPersonPropertiesForFlags resetPersonPropertiesForFlags setGroupPropertiesForFlags resetGroupPropertiesForFlags reset get_distinct_id getGroups get_session_id get_session_replay_url alias set_config startSessionRecording stopSessionRecording sessionRecordingStarted captureException startExceptionAutocapture stopExceptionAutocapture loadToolbar get_property getSessionProperty us ns createPersonProfile hs Vr vs opt_in_capturing opt_out_capturing has_opted_in_capturing has_opted_out_capturing get_explicit_consent_status is_capturing clear_opt_in_out_capturing ss debug O ls getPageViewId captureTraceFeedback captureTraceMetric qr".split(" "),n=0;n<o.length;n++)g(u,o[n]);e._i.push([i,s,a])},e.__SV=1)}(document,window.posthog||[]);
+        posthog.init('phc_3uotKG0DwlxtUuIhhhX9bw1J4SXIBXz1uHfcXzPdxQS', {
+            api_host: 'https://us.i.posthog.com',
+            defaults: '2025-11-30',
+            person_profiles: 'identified_only',
+        })
+    </script>
     <script type="text/javascript">
         (function(c,l,a,r,i,t,y){
             c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
@@ -49,6 +57,7 @@
             }
         })();
     </script>  -->
+    
     <script type="module">
         import { init, id, lookup } from 'https://cdn.jsdelivr.net/npm/@instantdb/core@0.22.90/+esm';
         window.InstantDB = { init, id, lookup };
@@ -6465,7 +6474,7 @@
                                         class="text-xl font-bold overflow-hidden text-ellipsis w-full"
                                         :class="[
                                             hasRelatedEpisodesForEpisode(selectedEpisode) && !isEpisodeSwitchBlocked(selectedEpisode) ? 'underline text-yellow-300 cursor-pointer' : '',
-                                            isEpisodeSwitchBlocked(selectedEpisode) ? 'opacity-60 text-yellow-300 cursor-not-allowed' : ''
+                                            isEpisodeSwitchBlocked(selectedEpisode) ? 'opacity-80 cursor-not-allowed' : ''
                                         ]"
                                         @click.stop="toggleRelatedEpisodeMenu"
                                     >
@@ -19727,22 +19736,44 @@
                         console.log("platform:", webApp?.platform);
                         console.log("===============================");
 
+                        
                         if (webApp?.initDataUnsafe?.user) {
                             const initData = webApp.initDataUnsafe;
-                            const user = webApp.initDataUnsafe.user;
-                            LogRocket.identify(String(user.id), {
-                                name: `${user.first_name} ${user.last_name || ''}`.trim(),
-                                telegramProfile: user.username ? `https://t.me/${user.username}` : undefined,
-                                username: user.username || undefined,
-                                language_code: user.language_code || undefined,
-                                is_premium: user.is_premium || false,
-                                photo_url: user.photo_url || undefined,
-                                allows_write_to_pm: user.allows_write_to_pm || undefined,
-                                query_id: initData.query_id || undefined,
-                                auth_date: initData.auth_date || undefined,
-                                signature: initData.signature || undefined,
-                                hash: initData.hash || undefined
-                            });
+                            const user = initData.user;
+
+                            // LogRocket
+                            if (window.LogRocket) {
+                                LogRocket.identify(String(user.id), {
+                                    name: `${user.first_name} ${user.last_name || ''}`.trim(),
+                                    telegramProfile: user.username ? `https://t.me/${user.username}` : undefined,
+                                    username: user.username || undefined,
+                                    language_code: user.language_code || undefined,
+                                    is_premium: user.is_premium || false,
+                                    photo_url: user.photo_url || undefined,
+                                    allows_write_to_pm: user.allows_write_to_pm || undefined,
+                                    query_id: initData.query_id || undefined,
+                                    auth_date: initData.auth_date || undefined,
+                                    signature: initData.signature || undefined,
+                                    hash: initData.hash || undefined
+                                });
+                            }
+
+                            // PostHog
+                            if (window.posthog) {
+                                posthog.identify(String(user.id), {
+                                    name: `${user.first_name} ${user.last_name || ''}`.trim(),
+                                    telegram_profile: user.username ? `https://t.me/${user.username}` : undefined,
+                                    username: user.username || undefined,
+                                    language_code: user.language_code || undefined,
+                                    is_premium: user.is_premium || false,
+                                    photo_url: user.photo_url || undefined,
+                                    allows_write_to_pm: user.allows_write_to_pm || undefined,
+                                    query_id: initData.query_id || undefined,
+                                    auth_date: initData.auth_date || undefined,
+                                    signature: initData.signature || undefined,
+                                    hash: initData.hash || undefined
+                                });
+                            }
                         }
 
                         const response = await fetch('https://ccuid.mdccxxixix.workers.dev', {
