--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -11,7 +11,7 @@
         apiKey: '3377443f-ce49-449d-8ec3-4db172e5ddd2',
         service: 'DCRef',  
         consoleCapture: true, 
-        advancedNetworkCapture: true
+        advancedNetworkCapture: false
     });
     </script>
     <script>
