--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -7313,7 +7313,7 @@
                     episode: { status: null },
                     movie: { status: null },
                     ep: 1185,
-                    mangaCh: 1156,
+                    mangaCh: 1155,
                     // Daily Limit Data
                     dailyDownloads: 0,
                     dailyReady: false,
@@ -19948,7 +19948,102 @@
                         });
                         const result = await response.json();
 
-                        if (result.valid) {
+                        const formatDurationArabic = (ms) => {
+                            const totalSeconds = Math.max(0, Math.floor(ms / 1000));
+                            const days = Math.floor(totalSeconds / 86400);
+                            const hours = Math.floor((totalSeconds % 86400) / 3600);
+                            const minutes = Math.floor((totalSeconds % 3600) / 60);
+                            const seconds = totalSeconds % 60;
+
+                            const parts = [];
+                            if (days) parts.push(`${days} يوم`);
+                            if (hours) parts.push(`${hours} ساعة`);
+                            if (minutes) parts.push(`${minutes} دقيقة`);
+                            if (!parts.length) parts.push(`${seconds} ثانية`);
+                            return parts.join(' و ');
+                        };
+
+                        if (result?.error) {
+                            throw new Error(result.error);
+                        }
+
+                        if (result?.banned) {
+                            this.userJoined = false;
+
+                            const remainingMs = typeof result.banRemainingMs === 'number'
+                                ? result.banRemainingMs
+                                : (typeof result.banUntil === 'number' ? Math.max(0, result.banUntil - Date.now()) : 0);
+                            const remainingText = formatDurationArabic(remainingMs);
+                            const untilText = typeof result.banUntil === 'number'
+                                ? new Date(result.banUntil).toLocaleString('ar-EG', { hour12: false })
+                                : '';
+
+                            document.body.innerHTML = `
+                                <div style="position: fixed; inset: 0; display: flex; justify-content: center; align-items: center; background: #23447d; font-family: Tahoma, 'Segoe UI', Geneva, sans-serif; z-index: 99999;">
+                                    <div style="text-align: center; padding: 30px 20px; border: 2px solid #fff; border-radius: 15px; background-color: #0f141f; box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5); max-width: 450px; width: 95%; direction: rtl;">
+                                        <h1 style="font-size: 28px; font-weight: bold; color: #ff4f4f; margin-bottom: 20px; display: flex; justify-content: center; gap: 10px;">
+                                            <span>🚫</span><span>تم حظرك مؤقتًا</span><span>🚫</span>
+                                        </h1>
+
+                                        <p style="font-size: 18px; color: #fff; font-weight: bold; margin-bottom: 12px; line-height: 1.6;">
+                                            لقد قمت بمغادرة القناة 3 مرات خلال أسبوع.
+                                        </p>
+
+                                        <p style="font-size: 17px; color: #ffff00; font-weight: bold; margin-bottom: 10px; line-height: 1.6;">
+                                            الوقت المتبقي لرفع الحظر: <span style="color: #00ff00;">${remainingText}</span>
+                                        </p>
+
+                                        ${untilText ? `
+                                            <p style="font-size: 14px; color: #cbd5e1; margin-bottom: 25px;">
+                                                ينتهي الحظر في: <span style="color: #ffffff; font-weight: bold;">${untilText}</span>
+                                            </p>
+                                        ` : `<div style="margin-bottom: 25px;"></div>`}
+
+                                        <button
+                                            id="retryButton"
+                                            class="
+                                                w-[80%] px-3 py-3
+                                                bg-gradient-to-br from-blue-600 to-blue-800
+                                                text-white text-[18px] font-bold
+                                                rounded-xl
+                                                inline-flex items-center justify-center gap-2
+                                                shadow-[0_6px_0_#0c3e82,0_10px_20px_rgba(0,0,0,0.3)]
+                                                transition-all duration-150 ease-out
+                                                hover:-translate-y-1
+                                                hover:shadow-[0_8px_0_#0c3e82,0_14px_25px_rgba(0,0,0,0.35)]
+                                                active:translate-y-1
+                                                active:shadow-[0_3px_0_#0c3e82,0_6px_10px_rgba(0,0,0,0.25)]
+                                                active:scale-[0.98]
+                                                active:brightness-90
+                                            "
+                                        >
+                                            <span id="retryText" class="inline-flex items-center gap-2">
+                                                <span>🔍</span>
+                                                <span>تحقق مرة أخرى</span>
+                                                <span>🔍</span>
+                                            </span>
+
+                                            <div id="retrySpinner" class="hidden animate-spin rounded-full h-8 w-8 border-b-2 border-white"></div>
+                                        </button>
+                                    </div>
+                                </div>
+                            `;
+
+                            const btn = document.getElementById('retryButton');
+                            const text = document.getElementById('retryText');
+                            const spinner = document.getElementById('retrySpinner');
+
+                            btn.addEventListener('click', () => {
+                                text.classList.add('hidden');
+                                spinner.classList.remove('hidden');
+                                btn.disabled = true;
+                                btn.classList.add('opacity-80', 'cursor-not-allowed');
+
+                                setTimeout(() => {
+                                    window.location.reload();
+                                }, 500);
+                            });
+                        } else if (result.valid) {
                             this.userJoined = true;
                         } else {
                             this.userJoined = false;
@@ -22119,4 +22214,3 @@
     </style>
 </body>
 </html>
-
