--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -19975,7 +19975,7 @@
                                 : (typeof result.banUntil === 'number' ? Math.max(0, result.banUntil - Date.now()) : 0);
                             const remainingText = formatDurationArabic(remainingMs);
                             const untilText = typeof result.banUntil === 'number'
-                                ? new Date(result.banUntil).toLocaleString('ar-EG', { hour12: false })
+                                ? new Date(result.banUntil).toLocaleString('en-US', { hour12: false })
                                 : '';
 
                             document.body.innerHTML = `
