--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -20002,15 +20002,7 @@
                                             <span id="banRemaining" style="color: #00ff00;">${remainingText}</span>
                                         </p>
 
-                                        ${untilText ? `
-                                            <p style="font-size: 14px; color: #cbd5e1; margin-bottom: 25px;">
-                                                ينتهي الحظر في:
-                                                <br>
-                                                <span style="color: #ffffff; font-weight: bold;">${untilText}</span>
-                                            </p>
-                                        ` : `<div style="margin-bottom: 25px;"></div>`}
-
-                                        <div style="font-size: 14px; color: #cbd5e1; font-weight: bold; margin-top: -10px; margin-bottom: 18px;">
+                                        <div style="font-size: 14px; color: #cbd5e1; font-weight: bold;">
                                             (${validateUserId})
                                         </div>
                                     </div>
